--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 * {
 	margin: 0;
 	padding: 0;
-	font-family: sans-serif;
+	font-family: 'Space Grotesk', sans-serif;;
 }
 
 body {
@@ -79,8 +79,8 @@ body {
 #card-number-1 {
 	width: 100%;
 	color: #fff;
-	font-size: 30px;
-	letter-spacing: 4px;
+	font-size: 28px;
+	letter-spacing: 2px;
 	text-align: center;
 	margin-bottom: 30px;
 	white-space: nowrap;
